--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hint_nombre">Nombre:</string>
     <string name="hint_telefono">Teléfono:</string>
     <string name="btn_guarda">Guardar Contacto</string>
+    <string name="btn_sorpresa">Sorpresa</string>
 </resources>
